Improve flex base size calculation in case max-width is set for flex items
DEVSIX-8768